--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                 <span class="heading-primary-main">Outdoors</span>
                 <span class="heading-primary-sub">is where life happens</span>
             </h1>
-        </div>
 
+            <a href="#" class="btn btn-white" role="button">Browse our courses</a>
+        </div>
     </header>
 </body>
 
