--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
 
 <body>
     <header class="header">
-        <div class="logo-box">
-            <img src="./assets/logo-white.png" alt="the logo image" class="logo" height="30px">
+        <div class="header__logo-box">
+            <img src="./assets/logo-white.png" alt="the logo image" class="header__logo" height="30px">
         </div>
 
-        <div class="text-box">
+        <div class="header__text-box">
+            <!-- here the heading-primary, we consider it as a standalone block of code we can use it at some other place too so we will not make it as element of header -->
             <h1 class="heading-primary">
-                <span class="heading-primary-main">Outdoors</span>
-                <span class="heading-primary-sub">is where life happens</span>
+                <span class="heading-primary--main">Outdoors</span>
+                <span class="heading-primary--sub">is where life happens</span>
             </h1>
 
-            <a href="#" class="btn btn-white" role="button">Browse our courses</a>
+            <a href="#" class="btn btn--white btn--animate" role="button">Browse our courses</a>
         </div>
     </header>
 </body>
