--- a/index.html
+++ b/index.html
@@ -30,73 +30,42 @@
         </div>
     </header>
 
-    <section class="grid-test">
-        <div class="row">
-            <div class="col-1-of-2">
-                Col 1 of 2
+    <main>
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    Exciting tours for adventurous people
+                </h2>
             </div>
-            <div class="col-1-of-2">
-                Col 1 of 2
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-        </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        You're going to fall in love with nature
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae qui magnam vitae vero facere
+                        delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt eligendi
+                        accusamus deserunt! Ipsum, quae.
+                    </p>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        live adventure like never have before
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae qui magnam vitae vero facere
+                        delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt eligendi
+                        accusamus deserunt! Ipsum, quae.
+                    </p>
 
-        <div class="row">
-            <div class="col-1-of-3">
-                Col 1 of 3
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
+                </div>
+                <div class="col-1-of-2">
+                    Image here
+                </div>
             </div>
-            <div class="col-2-of-3">
-                Col 2 of 3
-            </div>
-        </div>
+        </section>
 
-        <div class="row">
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-        </div>
-
-         <div class="row">
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-2-of-4">
-                Col 2 of 4
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-3-of-4">
-                Col 3 of 4
-            </div>
-        </div>
-    </section>
+    </main>
 </body>
 
 </html>
