--- a/index.html
+++ b/index.html
@@ -54,24 +54,70 @@
                     </h3>
                     <p class="paragraph">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae qui magnam vitae vero facere
-                        delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt eligendi
-                        accusamus deserunt! Ipsum, quae.
+                        delectus fuga voluptates, iure, ipsam.
                     </p>
 
                     <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
-                        <img src="assets/images/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
-                        <img src="assets/images/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
-                        <img src="assets/images/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
+                        <img src="assets/images/nat-1-large.jpg" alt="photo 1"
+                            class="composition__photo composition__photo--p1">
+                        <img src="assets/images/nat-2-large.jpg" alt="photo 2"
+                            class="composition__photo composition__photo--p2">
+                        <img src="assets/images/nat-3-large.jpg" alt="photo 3"
+                            class="composition__photo composition__photo--p3">
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="section-feature">
-            <i class="icon-basic-world"></i>
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                        <p class="feature-box__text">
+                            delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt
+                            eligendi
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Meat nature</h3>
+                        <p class="feature-box__text">
+                            delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt
+                            eligendi
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                        <p class="feature-box__text">
+                            delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt
+                            eligendi
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                        <p class="feature-box__text">
+                            delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt
+                            eligendi
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
