--- a/index.html
+++ b/index.html
@@ -229,6 +229,60 @@
                 <a href="#" class="btn btn--green">Discover all tours</a>
             </div>
         </section>
+
+        <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay loop muted>
+                    <source src="./assets/images/video.mp4" type="video/mp4">
+                    <source src="./assets/images/video.webm" type="video/webm">
+                    <p>your browser is not supported!</p>
+                </video>
+            </div>
+
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="./assets//images/nat-8.jpg" alt="person on a tour" class="story__image">
+                        <figCaption class="story__caption">Mary smith</figCaption>
+                    </figure>
+
+                    <div class="story__text">
+                        <h3 class="heading__tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                        <p>
+                            delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt
+                            eligendi Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet expedita eligendi vel tempora dolore ducimus in quia aperiam porro. Unde. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="./assets//images/nat-9.jpg" alt="person on a tour" class="story__image">
+                        <figCaption class="story__caption">Jack Wilson</figCaption>
+                    </figure>
+
+                    <div class="story__text">
+                        <h3 class="heading__tertiary u-margin-bottom-small">WOW! My life completely defferent now</h3>
+                        <p>
+                            delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt
+                            eligendi Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet expedita eligendi vel tempora dolore ducimus in quia aperiam porro. Unde. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">Read all stories</a>
+            </div>
+        </section>
     </main>
 </body>
 
