create booking section

--- a/index.html
+++ b/index.html
@@ -256,7 +256,9 @@
                         <h3 class="heading__tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
                         <p>
                             delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt
-                            eligendi Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet expedita eligendi vel tempora dolore ducimus in quia aperiam porro. Unde. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            eligendi Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet expedita eligendi
+                            vel tempora dolore ducimus in quia aperiam porro. Unde. Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
@@ -273,7 +275,9 @@
                         <h3 class="heading__tertiary u-margin-bottom-small">WOW! My life completely defferent now</h3>
                         <p>
                             delectus fuga voluptates, iure, ipsam ab reprehenderit obcaecati commodi cumque sunt
-                            eligendi Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet expedita eligendi vel tempora dolore ducimus in quia aperiam porro. Unde. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            eligendi Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet expedita eligendi
+                            vel tempora dolore ducimus in quia aperiam porro. Unde. Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
@@ -287,7 +291,26 @@
         <section class="section-booking">
             <div class="row">
                 <div class="book">
-                    
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    Start Booking Now
+                                </h2>
+                            </div>
+                            <div class="form__group">
+                                <input type="text" name="name" id="name" class="form__input" placeholder="Full Name"
+                                    required>
+                                <label for="name" class="form__label">Full name</label>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="email" name="email" id="email" class="form__input" placeholder="Your Email"
+                                    required>
+                                <label for="email" class="form__label">Email</label>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
