--- a/index.html
+++ b/index.html
@@ -337,6 +337,32 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <img src="./assets/images/logo-green-2x.png" alt="Full logo" class="footer__logo">
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="#" class="footer__link">Comapany</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    © 2026 Shivendra Dwivedi. All rights reserved.
+                    The content, design, and code on this website are the intellectual property of the author and may not be reproduced without permission.
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
