Create the navigation menu

--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
 </head>
 
 <body>
+    <div class="navigation">
+        <input type="checkbox" name="navigation__checkbox" id="navi-toggle">
+        <label for="navi-toggle" class="navigation__button">Menu</label>
+        <div class="navigation__background"></div>
+
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="#" class="navigation__link">About Natrous</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Your benfits</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Popular tours</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Book now</a></li>
+            </ul>
+        </nav>
+    </div>
     <header class="header">
         <div class="header__logo-box">
             <img src="./assets/images/logo-white.png" alt="the logo image" class="header__logo" height="30px">
