Creae the sliding navs animation

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
 <body>
     <div class="navigation">
-        <input type="checkbox" name="navigation__checkbox" id="navi-toggle">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
         <label for="navi-toggle" class="navigation__button">Menu</label>
         <div class="navigation__background"></div>
 
         <nav class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link">About Natrous</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Your benfits</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Popular tours</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Book now</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natrous</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benfits</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
             </ul>
         </nav>
     </div>
@@ -381,3 +381,7 @@
 </body>
 
 </html>
+
+<!-- all inline elements acts like a text and the text properties can be applied on it -->
+<!-- like img element is inline so if we do text-align:center on its parent then img will get center aligned  -->
+<!-- z-index works when element has position prop defined -->
