finish the navgation and create the popup

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
     <div class="navigation">
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
-        <label for="navi-toggle" class="navigation__button">Menu</label>
+        <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
         <div class="navigation__background"></div>
 
         <nav class="navigation__nav">
@@ -378,6 +380,25 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="assets/images/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="assets/images/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read terms before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, maxime repudiandae. Quibusdam adipisci doloribus delectus quod sunt. Eligendi, culpa recusandae!
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta minus accusamus dolore exercitationem rem expedita excepturi aliquam odio reiciendis ea.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam alias doloremque voluptas, facilis aliquam quam delectus nam quidem odio minus.
+                </p>
+                <a href="#" class="btn btn--green">Book Now</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
